--- a/style.css
+++ b/style.css
@@ -1,28 +1,70 @@
-#pagina {
-    margin: 0 auto
+html {
+	width: 100%;
+	height: 100%;
 }
-#cabecalho, #esquerda, #centro, #direita, #rodape {
-    background-color: aqua;
-    margin: 10px;
+
+header {
+	background: rgb(243, 240, 240);
+	height: 50PX;
+	padding: 20px 0;
+	width: 100%;
 }
-#cabecalho{
-    height: 150px;
+
+h1 {
+    text-align: center;
+	font-size: 30px;
 }
-#esquerda{
+h3 {
+    text-align: left;
+	font-size: 20px;
+}
+h4{
+    text-align: right;
+	font-size: 20px;
+}
+
+#menu {
     width: 20%;
-    height: 500px;
+    height: 600px;
+    background-color: rgb(243, 240, 240);
+    float: left;
+    margin-top: 10px;
+}
+
+#principal {
+    width: 80%;
+    height: 600px;
+    background-color:rgb(231, 228, 228);
+    float: left;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#exercicio1 {
+	width: 50%;
+    height: 600px;
     float: left;
 }
-#centro{
-    width: 55%;
-    height: 500px;
+#exercicio1nocss {
+	
+    width: 20%;
+    height: 400px;
     float: left;
 }
-#direita{
-    width: 20%;
-    height: 500px;
+#exercicio2nocss {
+	
+    width: 15%;
+    height: 400px;
     float: right;
 }
-#rodape{
-    height: 150px;
+p {
+    text-align: left;
+    font-size: 20px;
+}
+
+.imagemcomputacional {
+    width: 35%;
+    height: 400px;
+    padding: 100px;
+    text-align: center;
 }
