--- a/style.css
+++ b/style.css
@@ -5,22 +5,22 @@ html {
 
 header {
 	background: rgb(96, 170, 255);
-	height: 50PX;
+	height: 57PX;
 	padding: 20px 0;
 	width: 100%;
 }
 
 h1 {
     text-align: center;
-	font-size: 30px;
+	font-size: 20px;
 }
 h3 {
     text-align: left;
-	font-size: 20px;
+	font-size: 15px;
 }
 h4{
     text-align: right;
-	font-size: 20px;
+	font-size: 15px;
 }
 
 #menu {
@@ -62,7 +62,7 @@ p {
     font-size: 20px;
 }
 
-.imagemcomputacional {
+.imagemlagostal {
     width: 35%;
     height: 400px;
     padding: 100px;
